Start working on fixing dark mode in the MED view attempt 3

--- a/style.css
+++ b/style.css
@@ -238,6 +238,12 @@ a.activity-link {
     padding: 10px;
 }
 
+canvas {
+    padding: 5px;
+    background-color: white;
+    border-radius: 30px;
+}
+
 /*Dark Theme*/
 @media (prefers-color-scheme: dark) {
     body {
